# pyconn

./: .gitignore  justfile  pyproject.toml
firmware/: boot.py  main.py
firmware/app/: processor.py
firmware/core/: memory.py  scheduler.py
firmware/drivers/: mr60_radar.py
tools/ppt/: generate_ppt.py
